YUK-4116 -Adds the Customer Control Summary report for Southwest Electric and related functionality... -Fixes incorrect value in Detailed report for number of opt out events